# agentlenz

./: .gitignore  GETTING-STARTED.md  README.md  health-report.md  standup-2026-03-27.md  standup-2026-04-01.md  standup-2026-04-03.md  standup-2026-04-15.md  standup-2026-04-16.md  standup-2026-04-20.md  standup-2026-05-15.md  standup-2026-05-18.md  standup-2026-05-19.md  standup-2026-05-20.md  standup-2026-05-21.md  standup-2026-05-22.md  standup-2026-05-25.md  standup-2026-05-26.md  standup-2026-05-27.md  standup-2026-05-28.md  standup-2026-05-29.md  standup-2026-06-01.md  standup-2026-06-02.md  standup-2026-06-03.md  standup-2026-06-04.md  standup-2026-06-05.md  standup-2026-06-08.md  standup-2026-06-09.md  standup-2026-06-10.md  standup-2026-06-11.md  standup-2026-06-12.md  standup-2026-06-16.md  standup-2026-06-17.md  standup-2026-06-18.md  standup-2026-06-19.md  standup-2026-06-22.md  standup-2026-06-23.md  standup-2026-06-24.md  standup-2026-06-25.md  standup-2026-06-26.md  (+4 more)
backend/: .dockerignore  DEPLOY.md  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 55d8cfecf4d3_initial_schema.py
backend/scripts/: create_api_key.py
backend/src/agentfinops_api/: auth.py  db.py  main.py  models.py
backend/tests/: conftest.py  test_budgets.py  test_costs.py  test_ingest.py  test_pricing.py  test_recommender.py  test_waste_detector.py
sdk/: pyproject.toml
sdk/tests/: conftest.py  test_budget.py  test_client.py  test_config.py  test_integration.py  test_spans.py  test_trace.py  test_wrapper_anthropic.py  test_wrapper_openai.py
(+72 files in other folders)
