[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
