[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Cut your AI agent costs — trace, optimize, enforce budgets"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
